--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ license = "MIT License"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
+black = "^21.9b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
