--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,15 @@ license = "MIT License"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+python-telegram-bot = "^13.7"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
+mypy = "^0.910"
+pyre-extensions = "^0.0.22"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
