fix bug where bot doesn't respond to /command@bot_name syntax

--- a/serverless.yml
+++ b/serverless.yml
@@ -36,6 +36,8 @@ functions:
           path: /slap/{token}
           authorizer:
             name: TokenAuthorizer
+    environment:
+      TELEGRAM_BOT_HANDLE: ${env:TELEGRAM_BOT_HANDLE}
   TokenAuthorizer:
     handler: handler.authorize
     name: TokenAuthorizer
